--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -24,6 +24,6 @@ jobs:
         run: |
           npm install
 
-      - name: Run Cypress tests
-        run: |
-          npm run cypress:run
+#      - name: Run Cypress tests
+#        run: |
+#          npm run cypress:run
